Replace the GUI Builder with a Maven-first Codename One app (#5523)
* Add the Maven-first GUI Builder rewrite

The Settings-era GUI Builder is a Swing tool tied to the old project layout.
This replaces it with a standalone Codename One desktop app under
scripts/guibuilder, launched by `mvn cn1:guibuilder`, in the same shape as
`cn1:settings` and the Game Builder: its own Maven build, its own executable
JAR, and its own Maven Central coordinates.

The editor edits `.gui` XML in `src/main/guibuilder` and round-trips the
generated Java next to it, so the design surface and the source stay in step.
Guided Layout builds on LayeredLayout with builder-owned, name-based
relationships (match width/height, reference targets, anchors), which is why
the model enforces unique component names and cascades renames, deletes, and
pastes across every relationship that points at them.

Core changes are the minimum the editor needs:

- CodeEditor gains protected-region markers and caret positioning, so the
  generated regions of a form's Java cannot be edited by hand.
- LayeredLayout UNIT_BASELINE now only uses a component's reported baseline
  when the component also describes its baseline resize behavior. The default
  `Component#getBaseline` returns the bottom content edge rather than a text
  baseline, so without this the documented font-ascent fallback was
  unreachable and containers and text areas aligned on the wrong line.
- SplitPane and Tabs no longer assume `getComponentForm()` is non-null; both
  can be deinitialized by the same gesture that triggers the callback, which
  the builder hits routinely when it rebuilds the inspector.

`cn1:guibuilder` now forwards every `guibuilder.*` property, passes the
desktop identity and `--add-exports` arguments the JavaSE runtime needs, and
fails with a clear message when Maven is running on a JDK older than 17.

scripts/** is excluded from PR CI, so .github/workflows/guibuilder.yml is
added as the only job that compiles the editor again